# dprint-plugin-svg

./: .dprint.json  .dprint.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  opencode.jsonc  rust-toolchain.toml
.cargo/: config.toml
.github/: AGENTS.md
.github/actions/setup-private-deps/: action.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.zed/: settings.json
deployment/: schema.json
docs/: AGENTS.md  book.toml
docs/src/: SUMMARY.md  ignoring-code.md  introduction.md
docs/src/_generated/: defaults-table.md  quickstart.md  summary-config.md
docs/src/config/: attribute-layout.md  attribute-sort.md  attributes-per-line.md  blank-lines.md  format-embedded-content.md  indent-width.md  line-width.md  max-inline-tag-width.md  multiline-attribute-values.md  new-line-kind.md  quote-style.md  space-before-self-close.md  text-content.md  use-tabs.md  wrapped-attribute-indent.md
docs/superpowers/plans/: 2026-03-29-embedded-formatting.md
src/: AGENTS.md  lib.rs  schema.rs
tests/: AGENTS.md  plugin_settings.rs  schema.rs
tests/configs/: alphabetical-double-quotes.dprint.json  attrs-per-line-invalid.dprint.json  blank-lines-truncate.dprint.json  crlf-newline.dprint.json  defaults-global.dprint.json  embedded-disabled.dprint.json  global-crlf-only.dprint.json  multiline-align.dprint.json  range-request.dprint.json  spaces-no-self-close.dprint.json  text-content-collapse.dprint.json  text-content-maintain.dprint.json  unknown-key.dprint.json
