[package]
name        = "dprint-plugin-svg"
version     = "0.2.3"
edition     = "2024"
description = "dprint Wasm plugin for SVG formatting"
readme      = "README.md"
repository  = "https://github.com/kjanat/dprint-plugin-svg"
license     = "MIT"
keywords    = ["dprint", "formatter", "svg", "wasm"]
categories  = ["development-tools", "text-editors"]
publish     = false
autobins    = false

[lib]
crate-type = ["cdylib", "lib"]
name       = "dprint_plugin_svg"
path       = "src/lib.rs"

[[bin]]
name              = "generate-schema"
path              = "src/bin/generate-schema.rs"
required-features = ["schema"]

[dependencies]
anyhow      = "1"
dprint-core = { version = "0.67", features = ["wasm"] }
schemars    = { version = "1", optional = true }
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["preserve_order"] }

[dependencies.svg-format]
package = "svg-format"
git     = "https://github.com/kjanat/svg-language-server"  # path    = "../svg-language-server/crates/svg-format"
rev     = "28cb1990388883573d80b3d7b15ecc974ecfafdd"

[features]
default = []
schema  = ["dep:schemars"]
