[package]
name        = "dprint-plugin-svg"
version     = "0.2.9"
edition     = "2024"
description = "dprint Wasm plugin for SVG formatting"
readme      = "README.md"
repository  = "https://github.com/kjanat/dprint-plugin-svg"
license     = "MIT"
keywords    = ["dprint", "formatter", "svg", "wasm"]
categories  = ["development-tools", "text-editors"]
publish     = false
autobins    = false

[lib]
crate-type = ["cdylib", "lib"]
name       = "dprint_plugin_svg"
path       = "src/lib.rs"

[[bin]]
name              = "generate-schema"
path              = "src/bin/generate-schema.rs"
required-features = ["schema"]

[dependencies]
anyhow       = "1"
const_format = "0.2"
dprint-core  = { version = "0.67", features = ["wasm"] }
schemars     = { version = "1", optional = true }
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", features = ["preserve_order"] }

[dependencies.svg-format]
package = "svg-format"
git     = "https://github.com/kjanat/svg-language-server"  # path    = "../svg-language-server/crates/svg-format"
rev     = "e1ff76c844c273220358f95b66f244090d646faa"

[features]
default = []
schema  = ["dep:schemars"]

# Size-optimized profile for the published wasm artifact. Inherits from
# `release` and adds aggressive size reductions: opt-level "z", fat LTO,
# single codegen unit, panic = abort (no unwind tables), and symbol strip.
# Compile time increases significantly; runtime perf is slightly traded off
# for the smaller binary, which matters more for a dprint plugin (cold-load
# cost dominates over steady-state throughput).
[profile.wasm-release]
inherits      = "release"
opt-level     = "z"
strip         = true
lto           = "fat"
panic         = "abort"
codegen-units = 1
